tests/type/redeclare_struct_same_scope.rev
struct Foo {}
struct Foo {} // error: a structure with the same name as already been declared in this scope